--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
  
  
 <meta charset="utf-8">
- <title>TGD Search</title>
- <meta name="description" content="Free Search, No ADS and Private Web history">
+ <title>Cool Penguins Of CP</title>
+ <meta name="description" content="Only The Coolest Penguins Allowed">
 <meta name="author" content="TGD Dev">
 
  <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5e4f96fe6f0a010012736333&product=inline-reaction-buttons&cms=sop' async='async'></script>
