--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 <body> 
  
 <div id="navbar">
-  <a href="#default" id="logo"> <img src="images/logo.png"</a>
+  <a href="#default" id="logo"> <img src="images/logo.png" width="200" length="200"></a>
   <div id="navbar-right">
     <a class="active" href="https://coolpenguinsofcp.netlify.com/">Home</a>
     <a href="#contact">Uniform</a>
