--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
 
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
-      body {
-        font-family: 'Open Sans', serif;
-        font-size: 20px;
-      }
-     
-     #navbar {
+   * {box-sizing: border-box;}
+
+body { 
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#navbar {
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 90px 10px;
@@ -84,18 +86,6 @@
     float: none;
   }
 }
-    a:link,a:visited {
-   color: Black;
-   background-color: #FFFFFF;
-   text-decoration: none;
-   target-new: none;
-  }
-  a:hover {
-   color: Black;
-   background-color: White;
-   text-decoration: underline;
-   target-new: none;
-  }
      
      .inputs {
   display: inline-block;
@@ -149,7 +139,7 @@
 <body> 
  
 <div id="navbar">
-  <a href="#default" id="logo"> <img src="images/logo.png" width="200" length="200"></a>
+  <a href="#default" id="logo"> The Cool Penguins Of CP</a>
   <div id="navbar-right">
     <a class="active" href="https://coolpenguinsofcp.netlify.com/">Home</a>
     <a href="#contact">Uniform</a>
