--- a/index.html
+++ b/index.html
@@ -130,7 +130,19 @@ body {
   -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
   transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
 }
+/* Create two unequal columns that floats next to each other */
+/* Left column */
+.leftcolumn {   
+  float: left;
+  width: 75%;
+}
 
+/* Right column */
+.rightcolumn {
+  float: left;
+  width: 25%;
+  padding-left: 20px;
+}
 
     </style>
 
@@ -161,5 +173,11 @@ function scrollFunction() {
   }
 }
 </script>
+ <div class="rightcolumn">
+    <div class="card">
+     <button class="enjoy-css" type="button"><a href="https://cponline.pw">Play Club Penguin</a></button>
+ 
+    </div>
+
 </body>
 </html>
