--- a/index.html
+++ b/index.html
@@ -130,19 +130,7 @@ body {
   -o-transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
   transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
 }
-/* Create two unequal columns that floats next to each other */
-/* Left column */
-.leftcolumn {   
-  float: left;
-  width: 75%;
-}
 
-/* Right column */
-.rightcolumn {
-  float: left;
-  width: 25%;
-  padding-left: 20px;
-}
 
     </style>
 
@@ -155,10 +143,14 @@ body {
   <div id="navbar-right">
     <a class="active" href="https://coolpenguinsofcp.netlify.com/">Home</a>
     <a href="#contact">Uniform</a>
-    <a href="#about">About</a>
+    <a href="#about">Discord</a>
   </div>
 </div>
-
+<div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
+ <p> Welcome To The Cool Penguins Army. Here you Can Talk and join events. <p>
+ 
+ 
+ 
 <script>
 // When the user scrolls down 80px from the top of the document, resize the navbar's padding and the logo's font size
 window.onscroll = function() {scrollFunction()};
@@ -173,11 +165,7 @@ function scrollFunction() {
   }
 }
 </script>
- <div class="rightcolumn">
-    <div class="card">
-     <button class="enjoy-css" type="button"><a href="https://cponline.pw">Play Club Penguin</a></button>
- 
-    </div>
+
 
 </body>
 </html>
