--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@ body {
 <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
  <p> Welcome To The Cool Penguins Army. Here you Can Talk and join events. <p>
  
+ <h1> Perks </h1>
+ <p> Get Known As The Coolest Penguin in town if you are in the cool penguins army. </p>
+ 
  
  
 <script>
