--- a/index.html
+++ b/index.html
@@ -147,10 +147,11 @@ body {
   </div>
 </div>
 <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
- <p> Welcome To The Cool Penguins Army. Here you Can Talk and join events. <p>
+ <p> Welcome To The Cool Penguins Army. Here you Can Talk on the Discord and Live chat, Join cool events hosted by YOU!, Get Known as a cool penguin and more! </p>
  
- <h1> Perks </h1>
- <p> Get Known As The Coolest Penguin in town if you are in the cool penguins army. </p>
+ <h2> How Can i join? </h2>
+ <p> To Join The Cool Penguins Army You Must Be In Our Uniform and Have A penguin more than 20 days old. </p>
+
  
  
  
