--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@ body {
   <div id="navbar-right">
     <a class="active" href="https://coolpenguinsofcp.netlify.com/">Home</a>
     <a href="#contact">Uniform</a>
-    <a href="#about">Discord</a>
+    <a href="https://discord.gg/aVhdzcc">Discord</a>
   </div>
 </div>
 <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
  <p> Welcome To The Cool Penguins Army. Here you Can Talk on the Discord and Live chat, Join cool events hosted by YOU!, Get Known as a cool penguin and more! </p>
  
  <h2> How Can i join? </h2>
- <p> To Join The Cool Penguins Army You Must Be In Our Uniform and Have A penguin more than 20 days old. </p>
+ <p> To Join The Cool Penguins Army You Must Be In Our Uniform and Have A penguin more than 20 days old. Once thats done join our Discord ( thats on the menu) to join. </p>
 
  
  
