--- a/index.html
+++ b/index.html
@@ -151,8 +151,10 @@ body {
  
  <h2> How Can i join? </h2>
  <p> To Join The Cool Penguins Army You Must Be In Our Uniform and Have A penguin more than 20 days old. Once thats done join our Discord ( thats on the menu) to join. </p>
-
- 
+ <h2> Why Should i Join? </h2>
+ <p> Every member in the army is considered equal. And all penguins will think YOU Are Cool. </p>
+ <h2> How do i contact you? </h2>
+ <p>Click the contact buttton in the menu to contact us. </p>
  
  
 <script>
