--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ body {
   <a href="#default" id="logo"> The Cool Penguins Of CP</a>
   <div id="navbar-right">
     <a class="active" href="https://coolpenguinsofcp.netlify.com/">Home</a>
-    <a href="#contact">Uniform</a>
+    <a href="https://coolpenguinsofcp.netlify.com/uniform.html">Uniform</a>
     <a href="https://discord.gg/aVhdzcc">Discord</a>
   </div>
 </div>
