--- a/uniform.html
+++ b/uniform.html
@@ -141,8 +141,8 @@ body {
 <div id="navbar">
   <a href="#default" id="logo"> The Cool Penguins Of CP</a>
   <div id="navbar-right">
-    <a class="active" href="https://coolpenguinsofcp.netlify.com/">Home</a>
-    <a href="#contact">Uniform</a>
+    <a href="https://coolpenguinsofcp.netlify.com/">Home</a>
+    <a class="active" href="https://coolpenguinsofcp.netlify.com/uniform.html">Uniform</a>
     <a href="https://discord.gg/aVhdzcc">Discord</a>
   </div>
 </div>
