--- a/uniform.html
+++ b/uniform.html
@@ -147,8 +147,12 @@ body {
   </div>
 </div>
 <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
- <p> This is the uniform below. </p>
+ <h2> FOR BOYS </h2>
+ <p> This is the uniform below. Feel free to use any hats, hair , and other accsessories to make your penguin better! </p>
  <img src="images/uniform.png">
+ <p> Here is a good example of a uniform customized. </p>
+ <img src="images/example1.png">
+ 
 
  
  
