--- a/uniform.html
+++ b/uniform.html
@@ -153,6 +153,12 @@ body {
  <p> Here is a good example of a uniform customized. </p>
  <img src="images/example1.png">
  
+ <h2> FOR GIRLS </h2>
+ <p> This is the uniform below. Use any color hoodie you want. Feel free to use any hats, hair , and other accsessories to make your penguin better! </p>
+ <img src="images/uniform2.png">
+ <p> Here is a good example of a uniform customized. </p>
+ <img src="images/example2.png">
+ 
 
  
  
