--- a/uniform.html
+++ b/uniform.html
@@ -144,7 +144,7 @@ body {
     <a href="https://coolpenguinsofcp.netlify.com/">Home</a>
     <a class="active" href="https://coolpenguinsofcp.netlify.com/uniform.html">Uniform</a>
     <a href="https://discord.gg/aVhdzcc">Discord</a>
-   <a href="https://coolpenguinsofcp.netlify.com/">Home</a>
+   <a href="https://coolpenguinsofcp.netlify.com/contact.html">Contact</a>
   </div>
 </div>
 <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
