--- a/contact.html
+++ b/contact.html
@@ -151,16 +151,16 @@ body {
  <h2> Contact Form </h2>
  <form name="contact" netlify>
   <p>
-    <label>Name <input type="text" name="name" /></label>
+    <label>Name <input class="inputs" type="text" name="name" /></label>
   </p>
   <p>
-    <label>Email <input type="email" name="email" /></label>
+    <label>Email <input class="inputs" type="email" name="email" /></label>
   </p>
   <p>
-    <label> Message <input type="text" name="Messafe" /></label>
+    <label> Message <input class="inputs" type="text" name="Messafe" /></label>
   </p>
   <p>
-    <button type="submit">Send</button>
+    <button class="enjoy-css" type="submit">Send</button>
   </p>
 </form>
  
