--- a/contact.html
+++ b/contact.html
@@ -160,6 +160,7 @@ body {
     <label> Message <input class="inputs" type="text" name="Messafe" /></label>
   </p>
   <p>
+   <div data-netlify-recaptcha="true"></div>
     <button class="enjoy-css" type="submit">Send</button>
   </p>
 </form>
