--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@ body {
 <body> 
  
 <div id="navbar">
-  <a href="#default" id="logo"> The Cool Penguins Of CP</a>
+  <a href="https://coolpenguinsofcp.netlify.com/" id="logo"> The Cool Penguins Of CP</a>
   <div id="navbar-right">
     <a href="https://coolpenguinsofcp.netlify.com/">Home</a>
     <a href="https://coolpenguinsofcp.netlify.com/uniform.html">Uniform</a>
