--- a/chat.html
+++ b/chat.html
@@ -151,7 +151,7 @@ body {
 <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
  <h2> Live Chat </h2>
 
-
+<script>
 // When the user scrolls down 80px from the top of the document, resize the navbar's padding and the logo's font size
 window.onscroll = function() {scrollFunction()};
 
