--- a/chat.html
+++ b/chat.html
@@ -150,7 +150,8 @@ body {
 </div>
 <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
  <h2> Live Chat </h2>
-
+ <iframe src="https://titanembeds.com/embed/690145460111147048" height="600" width="800" frameborder="0"></iframe>
+<iframe src="https://discordapp.com/widget?id=690145460111147048&theme=dark" width="500" height="500" allowtransparency="true" frameborder="0"></iframe>
 <script>
 // When the user scrolls down 80px from the top of the document, resize the navbar's padding and the logo's font size
 window.onscroll = function() {scrollFunction()};
