--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@ body {
  <p> Every member in the army is considered equal. And all penguins will think YOU Are Cool. </p>
  <h2> How do i contact you? </h2>
  <p>Click the contact buttton in the menu to contact us. </p>
+ <h2> Declaration of peace - Ice warriors </h2>
+ <p>Hello All. Im the owner of a foreign army on club penguin  online and i declare peace between The Ice Warriors icewarriorsofcp.com and The Cool Penguins thecoolpenguinsofcp.netlify.com . From this day onwards the two entities will fight side by side. </p>
  
  
 <script>
