--- a/uniform.html
+++ b/uniform.html
@@ -150,13 +150,13 @@ body {
 </div>
 <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
  <h2> FOR BOYS </h2>
- <p> This is the uniform below. Feel free to use any hats, hair , and other accsessories to make your penguin better! </p>
+ <p> This is the uniform below. Feel free to use any hats, hair , and other accessories to make your penguin better! </p>
  <img src="images/uniform.png">
  <p> Here is a good example of a uniform customized. </p>
  <img src="images/example1.png">
  
  <h2> FOR GIRLS </h2>
- <p> This is the uniform below. Use any color hoodie you want. Feel free to use any hats, hair , and other accsessories to make your penguin better! </p>
+ <p> This is the uniform below. Use any color hoodie you want. Feel free to use any hats, hair , and other accessories to make your penguin better! </p>
  <img src="images/uniform2.png">
  <p> Here is a good example of a uniform customized. </p>
  <img src="images/example2.png">
