--- a/contact.html
+++ b/contact.html
@@ -181,6 +181,13 @@ function scrollFunction() {
 }
 </script>
 
-
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+  new Crate({
+    server: '299881420891881473',
+    channel: '355719584830980096',
+    shard: 'https://disweb.dashflo.net'
+  })
+</script>
+ 
 </body>
 </html>
