--- a/uniform.html
+++ b/uniform.html
@@ -145,6 +145,7 @@ body {
     <a class="active" href="https://coolpenguinsofcp.netlify.com/uniform.html">Uniform</a>
     <a href="https://discord.gg/aVhdzcc">Discord</a>
    <a href="https://coolpenguinsofcp.netlify.com/contact.html">Contact</a>
+     <a href="https://coolpenguinsofcp.netlify.com/allies.html">Allies</a>
     
   </div>
 </div>
