--- a/allies.html
+++ b/allies.html
@@ -151,7 +151,7 @@ body {
 </div>
 <div style="margin-top:210px;padding:15px 15px 2500px;font-size:30px">
 <h2> <a href="http://icewarriorsofcp.com">Ice Warriors</a>
-<a href="https://discord.gg/UJaUgCe">CPAD</a>
+<a href="https://discord.gg/K7aAWNU">CPAD</a>
 </h2>
 
 </h2>
